--- a/Unify/Base.lproj/Main.storyboard
+++ b/Unify/Base.lproj/Main.storyboard
@@ -8728,10 +8728,10 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iMV-z1-lUb">
-                                                    <rect key="frame" x="15" y="10" width="344" height="15"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iMV-z1-lUb">
+                                                    <rect key="frame" x="15" y="9" width="344" height="17"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="15" id="pki-gL-q5Q"/>
+                                                        <constraint firstAttribute="height" constant="17" id="pki-gL-q5Q"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                     <nil key="textColor"/>
@@ -8740,10 +8740,10 @@
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="iMV-z1-lUb" firstAttribute="centerX" secondItem="S0Z-XR-kkS" secondAttribute="centerX" id="6eB-IS-YEp"/>
-                                                <constraint firstItem="S0Z-XR-kkS" firstAttribute="top" secondItem="iMV-z1-lUb" secondAttribute="bottom" constant="2" id="FOi-5I-fci"/>
+                                                <constraint firstItem="S0Z-XR-kkS" firstAttribute="top" secondItem="iMV-z1-lUb" secondAttribute="bottom" constant="1" id="FOi-5I-fci"/>
                                                 <constraint firstItem="iMV-z1-lUb" firstAttribute="leading" secondItem="S0Z-XR-kkS" secondAttribute="leading" id="JEi-vN-aCS"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="S0Z-XR-kkS" secondAttribute="bottom" constant="-2.5" id="ech-kg-Fzn"/>
-                                                <constraint firstItem="iMV-z1-lUb" firstAttribute="top" secondItem="Vwf-2o-bra" secondAttribute="topMargin" constant="2" id="eub-2x-TJK"/>
+                                                <constraint firstItem="iMV-z1-lUb" firstAttribute="top" secondItem="Vwf-2o-bra" secondAttribute="topMargin" constant="1" id="eub-2x-TJK"/>
                                                 <constraint firstItem="iMV-z1-lUb" firstAttribute="leading" secondItem="Vwf-2o-bra" secondAttribute="leadingMargin" constant="7" id="uCR-9h-dBH"/>
                                                 <constraint firstItem="iMV-z1-lUb" firstAttribute="centerX" secondItem="Vwf-2o-bra" secondAttribute="centerX" id="wvu-BK-DDP"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="S0Z-XR-kkS" secondAttribute="trailing" constant="7" id="xUK-dz-mTN"/>
@@ -13033,16 +13033,16 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <subviews>
                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="NGP-Id-SGa">
-                                        <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                        <rect key="frame" x="0.0" y="83" width="375" height="584"/>
                                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="z8p-fn-5h0">
                                             <size key="itemSize" width="90" height="90"/>
                                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                            <inset key="sectionInset" minX="15" minY="15" maxX="15" maxY="15"/>
+                                            <inset key="sectionInset" minX="15" minY="0.0" maxX="15" maxY="15"/>
                                         </collectionViewFlowLayout>
                                         <cells>
                                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ThumbnailCell" id="jCJ-Bb-Wg1" customClass="MediaThumbnailCell" customModule="Unify" customModuleProvider="target">
-                                                <rect key="frame" x="15" y="15" width="90" height="90"/>
+                                                <rect key="frame" x="15" y="0.0" width="90" height="90"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                                     <rect key="frame" x="0.0" y="0.0" width="90" height="90"/>
@@ -13055,13 +13055,65 @@
                                             <outlet property="delegate" destination="qEQ-Y5-3jo" id="6CD-et-UOh"/>
                                         </connections>
                                     </collectionView>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7oE-zP-cJX">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="75"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Social Media" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dy0-zP-nfD">
+                                                <rect key="frame" x="125" y="39" width="125" height="24"/>
+                                                <fontDescription key="fontDescription" name=".HelveticaNeueDeskInterface-Regular" family="San Francisco Text" pointSize="20"/>
+                                                <color key="textColor" red="0.01176470588" green="0.30196078430000001" blue="0.52941176469999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pO6-om-UrQ">
+                                                <rect key="frame" x="8" y="36" width="60" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="30" id="U15-hE-tUP"/>
+                                                    <constraint firstAttribute="width" constant="60" id="qmn-89-j4P"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" name=".HelveticaNeueDeskInterface-Regular" family="San Francisco Display" pointSize="17"/>
+                                                <state key="normal" title="Cancel">
+                                                    <color key="titleColor" red="0.01176470588" green="0.30196078430000001" blue="0.52941176469999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="dismissView:" destination="HCe-Wv-ari" eventType="touchUpInside" id="A5x-Vd-CK4"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GEo-rJ-Glc">
+                                                <rect key="frame" x="307" y="36" width="60" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="60" id="HYg-w7-lQc"/>
+                                                    <constraint firstAttribute="height" constant="30" id="cYv-Md-kw1"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" name=".HelveticaNeueDeskInterface-Regular" family="San Francisco Display" pointSize="17"/>
+                                                <state key="normal" title="Done">
+                                                    <color key="titleColor" red="0.01176470588" green="0.30196078430000001" blue="0.52941176469999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="dismissView:" destination="qEQ-Y5-3jo" eventType="touchUpInside" id="2KS-Ba-fYd"/>
+                                                    <action selector="dismissView:" destination="HCe-Wv-ari" eventType="touchUpInside" id="Ang-ki-rd0"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstItem="pO6-om-UrQ" firstAttribute="top" secondItem="7oE-zP-cJX" secondAttribute="top" constant="36" id="0qO-ca-Xsc"/>
+                                            <constraint firstItem="Dy0-zP-nfD" firstAttribute="top" secondItem="7oE-zP-cJX" secondAttribute="top" constant="39" id="Deo-Ir-cbz"/>
+                                            <constraint firstItem="pO6-om-UrQ" firstAttribute="leading" secondItem="7oE-zP-cJX" secondAttribute="leading" constant="8" id="USP-tC-1pm"/>
+                                            <constraint firstItem="Dy0-zP-nfD" firstAttribute="centerX" secondItem="7oE-zP-cJX" secondAttribute="centerX" id="ZiT-Cv-xBU"/>
+                                            <constraint firstAttribute="height" constant="75" id="p7m-wj-UVw"/>
+                                            <constraint firstItem="GEo-rJ-Glc" firstAttribute="baseline" secondItem="pO6-om-UrQ" secondAttribute="baseline" id="psY-ld-Uk4"/>
+                                            <constraint firstItem="GEo-rJ-Glc" firstAttribute="trailing" secondItem="7oE-zP-cJX" secondAttribute="trailingMargin" id="w9I-5u-xpe"/>
+                                        </constraints>
+                                    </view>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
+                                    <constraint firstItem="NGP-Id-SGa" firstAttribute="top" secondItem="7oE-zP-cJX" secondAttribute="bottom" constant="8" id="MS4-me-yNn"/>
                                     <constraint firstAttribute="trailing" secondItem="NGP-Id-SGa" secondAttribute="trailing" id="SSM-D5-hlh"/>
+                                    <constraint firstItem="7oE-zP-cJX" firstAttribute="leading" secondItem="NGP-Id-SGa" secondAttribute="leading" id="fCl-H4-xxL"/>
                                     <constraint firstAttribute="bottom" secondItem="NGP-Id-SGa" secondAttribute="bottom" id="ipf-gv-RuW"/>
-                                    <constraint firstItem="NGP-Id-SGa" firstAttribute="top" secondItem="GzQ-fF-2dY" secondAttribute="top" constant="64" id="nCA-t3-DQ7"/>
                                     <constraint firstItem="NGP-Id-SGa" firstAttribute="leading" secondItem="GzQ-fF-2dY" secondAttribute="leading" id="onu-Pu-h8Y"/>
+                                    <constraint firstItem="7oE-zP-cJX" firstAttribute="trailing" secondItem="NGP-Id-SGa" secondAttribute="trailing" id="tgM-wB-lWR"/>
+                                    <constraint firstItem="7oE-zP-cJX" firstAttribute="top" secondItem="GzQ-fF-2dY" secondAttribute="top" id="xoU-nc-7ar"/>
                                 </constraints>
                             </view>
                         </subviews>
